# nQuantGpp

./: CMakeLists.txt  Dockerfile  README.md  nQuantGpp.sln
.github/workflows/: c-cpp.yml  codeql.yml
nQuantGpp/: ApngWriter.cpp  ApngWriter.h  BlueNoise.cpp  BlueNoise.h  CIELABConvertor.cpp  CIELABConvertor.h  CMakeLists.txt  DblGNGGAQuantizer.cpp  DblGNGGAQuantizer.h  DblGNGQuantizer.cpp  DblGNGQuantizer.h  DivQuantizer.cpp  DivQuantizer.h  Dl3Quantizer.cpp  Dl3Quantizer.h  EdgeAwareSQuantizer.cpp  EdgeAwareSQuantizer.h  GilbertCurve.cpp  GilbertCurve.h  MedianCut.cpp  MedianCut.h  NeuQuantizer.cpp  NeuQuantizer.h  Otsu.cpp  Otsu.h  PnnLABGAQuantizer.cpp  PnnLABGAQuantizer.h  PnnLABQuantizer.cpp  PnnLABQuantizer.h  PnnQuantizer.cpp  PnnQuantizer.h  SpatialQuantizer.cpp  SpatialQuantizer.h  WuQuantizer.cpp  WuQuantizer.h  bitmapUtilities.cpp  bitmapUtilities.h  nQuantGpp.cpp  nQuantGpp.rc  nQuantGpp.vcxproj  (+2 more)
nQuantGpp/ga/: APNsgaIII.cpp  Chromosome.h  NsgaIII.cpp  NsgaIII.h
